force-app/main/default/objects/Payment_Milestone__c/fields/Exception_Approved__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Approved</label>
    <type>Checkbox</type>
</CustomField>