force-app/main/default/objects/Payment_Milestone__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Payment Milestones</relationshipLabel>
    <relationshipName>PaymentMilestones</relationshipName>
    <type>Lookup</type>
</CustomField>