force-app/main/default/objects/Payment_Milestone__c/fields/Voucher__c.field-meta.xml
<CustomField>
    <fullName>Voucher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher</label>
    <referenceTo>Voucher__c</referenceTo>
    <relationshipLabel>Payment Milestones</relationshipLabel>
    <relationshipName>PaymentMilestones</relationshipName>
    <type>Lookup</type>
</CustomField>